Native rendering (gpu acceleration) on Android

--- a/samples/Avalonia.LibMpv.Android.Sample.Android/Views/MainView.axaml
+++ b/samples/Avalonia.LibMpv.Android.Sample.Android/Views/MainView.axaml
@@ -15,7 +15,7 @@
         VerticalAlignment="Stretch"
         ColumnDefinitions="*"
         RowDefinitions="*,Auto">
-        <v:SoftwareVideoView
+        <v:NativeVideoView
             Grid.Row="0"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
