Iptv player sample

--- a/src/Samples/Player.Avalonia/Player.Avalonia/Views/MainView.axaml
+++ b/src/Samples/Player.Avalonia/Player.Avalonia/Views/MainView.axaml
@@ -17,7 +17,7 @@
 
     <Grid RowDefinitions="*,Auto">
 
-        <mpv:OpnGlVideoView MpvContext="{Binding .}" />
+        <mpv:VideoView MpvContext="{Binding .}" />
 
         <Grid
             Grid.Row="1"
