--- a/src/Samples/Player.Avalonia/Player.Avalonia/Views/MainView.axaml
+++ b/src/Samples/Player.Avalonia/Player.Avalonia/Views/MainView.axaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fa="using:FluentAvalonia.UI.Controls"
+    xmlns:ipc="clr-namespace:Player.Avalonia.Converters"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mpv="clr-namespace:LibMpv.Avalonia;assembly=LibMpv.Avalonia"
     xmlns:vm="clr-namespace:Player.Avalonia.ViewModels"
@@ -17,7 +18,7 @@
 
     <Grid RowDefinitions="*,Auto">
 
-        <mpv:VideoView MpvContext="{Binding .}" />
+        <mpv:OpnGlVideoView MpvContext="{Binding .}" />
 
         <Grid
             Grid.Row="1"
@@ -29,13 +30,12 @@
                 <Button
                     Background="Transparent"
                     BorderBrush="Transparent"
-                    Command="{Binding TogglePlayPauseCommand}"
-                    IsEnabled="{Binding IsInPlayMode}">
+                    Command="{Binding TogglePlayPauseCommand}">
                     <fa:SymbolIcon
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         FontSize="28"
-                        Symbol="{Binding PlayPauseSymbol}" />
+                        Symbol="{Binding PlayerState, Converter={x:Static ipc:PlayerStateToPlayPauseSymbolConverter.Instance}}" />
                 </Button>
             </StackPanel>
 
@@ -43,19 +43,19 @@
                 <TextBlock
                     VerticalAlignment="Center"
                     IsVisible="{Binding IsTextDurationsVisible}"
-                    Text="{Binding Position, StringFormat={}{0:hh}:{0:mm}:{0:ss}}" />
+                    Text="{Binding TimePos, StringFormat={}{0:hh}:{0:mm}:{0:ss}}" />
                 <Slider
                     Grid.Column="1"
                     Margin="5,0,5,0"
                     IsEnabled="{Binding IsSeekable}"
                     Maximum="100"
                     Minimum="0"
-                    Value="{Binding PercentPosition}" />
+                    Value="{Binding PercentPos}" />
                 <TextBlock
                     Grid.Column="2"
                     VerticalAlignment="Center"
                     IsVisible="{Binding IsTextDurationsVisible}"
-                    Text="{Binding Remaining, StringFormat={}{0:hh}:{0:mm}:{0:ss}}" />
+                    Text="{Binding TimeRemaining, StringFormat={}{0:hh}:{0:mm}:{0:ss}}" />
             </Grid>
 
             <Grid Grid.Column="2" ColumnDefinitions="Auto,*,Auto">
@@ -69,7 +69,7 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         FontSize="16"
-                        Symbol="{Binding MuteUnmuteSymbol}" />
+                        Symbol="{Binding IsMuted, Converter={x:Static ipc:MuteUnMuteToSymbolConverter.Instance}}" />
                 </Button>
 
                 <Slider
